--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "openai": "^4.104.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
